--- a/src/css/layout/_header.scss
+++ b/src/css/layout/_header.scss
@@ -1,95 +1,185 @@
 header {
-  position: fixed;
-  top: 0;
-  background-color: transparent;
-  @include border(bb, 1px, #aaa)
-  transition: 0.5s;
-  width: 100%;
-  z-index: 100;
-  @include media(mobile) {
-    height: 50px;
+    position: fixed;
+    top: 0;
+    background-color: transparent;
+    transition: 0.5s;
+    width: 100%;
+    z-index: 100;
+    @include media(mobile) {
+      height: 100px;
+      @include border(bb, 1px, #827B7B);
+    }
+
+  .phone-number {
+    font-family: RobotoBold;
+    color: #fff;
+    font-size: 25px;
+    right: 3%;
+    @include centerVertical();
+    top: 47%;
+    @include media(medium) {
+      display: none;
+    }
+    @include media(mobile) {
+      display: none;
+    }
   }
-}
 
-#menu {
-  @include media(nomobile) {
-    float: right;
+  #menu {
+    @include media(nomobile) {
+      float: right;
+    }
   }
-}
 
-#icon-menu {
-  @include media(nomobile) {
-    display: none;
+  #icon-menu {
+    @include media(nomobile) {
+      display: none;
+    }
+    margin: 0;
+    padding: 0;
+    @include centerVertical();
+    right: 5%;
   }
-  margin: 0;
-  padding: 0;
-  @include centerVertical();
-  right: 5%;
-}
 
-.show-menu {
-  left: 0% !important;
-}
-
-#logo {
-   float: left;
-   @include centerVertical();
-}
-#menu-list {
-   margin: 0;
-   padding: 0;
-   float: right;
-   @include media(mobile) {
-      text-align: center;
-      display: block;
-      position: absolute;
-      width: 100%;
-      left: 100%;
-      top: 100%;
-      transition: 0.4s;
-   }
-
-   li {
-     list-style: none;
-     @include media(nomobile) {
-       height: 100px;
-       &:first-child {
-         a {
-           @include border(bb, 2px, $gold);
-           color: $gold;
-         }
-       }
+  .show-menu {
+    left: 0% !important;
+  }
+  .logo {
+    background-color: #000;
+  }
+  #logo {
+     @include centerVertical();
+     top: 100%;
+     left: 5%;
+     @include media(mobile) {
+        top: 50%;
+        width: 115px;
+        height: 75px;
      }
-     a {
-         @include link(#000, $gold, 16px, uppercase);
-         display: block;
-         height: 100%;
-         padding: 0 20px;
-         @include media(mobmed) {
-           padding: 0 10px;
-         }
-         @include media(nomobile) {
-           &:focus{
-              @include border(bb, 2px, $gold);
-              color: $gold;
+  }
+  #menu-list {
+     margin: 0;
+     padding: 0;
+     float: right;
+     @include media(wide) {
+       @include translate(-60%, 0);
+     }
+     @include media(medium) {
+       @include translate(-5%, 0);
+     }
+     @include media(mobile) {
+        text-align: center;
+        display: block;
+        position: absolute;
+        width: 100%;
+        left: 100%;
+        top: 100%;
+        transition: 0.4s;
+     }
+
+     li {
+       list-style: none;
+       position: relative;
+
+       @include media(nomobile) {
+         height: 100px;
+         margin: 0 5px;
+         display: inline-block;
+         float: left;
+         &:first-child {
+           a {
+             @include border(bb, 4px, $gold);
+             color: $gold;
            }
          }
-         @include media(mobile) {
-          padding: 10px 150px;
-          color: $gold;
+         &:after {
+           content: '';
+           @include centerVertical();
+           right: -10%;
+           display: inline-block;
+           width: 5px;
+           height: 5px;
+           border-radius: 50%;
+           background-color: #fff;
          }
-         @include media(nomobile) {
-           line-height: 6.2;
-         }
+         &:last-child:after {
+          content: '';
+          display: none;
+        }
        }
-     @media screen and (min-width: 768px) {
-       display: inline-block;
-       float: left;
-     }
-     @media screen and (max-width: 768px) {
-        padding: 10px 0;
-        border-bottom: 1px solid #fff;
-        background-color: $black;
+       a {
+           @include link(#000, $gold, 16px, uppercase);
+           display: block;
+           height: 100%;
+           padding: 0 20px;
+           color: #fff;
+           @include media(mobmed) {
+             padding: 0 10px;
+           }
+           @include media(nomobile) {
+             &:focus{
+                @include border(bb, 2px, $gold);
+                color: $gold;
+             }
+           }
+           @include media(mobile) {
+            padding: 10px 150px;
+            color: $gold;
+           }
+           @include media(nomobile) {
+             line-height: 6.2;
+           }
+         }
+        @include media(mobile) {
+          padding: 10px 0;
+          border-bottom: 1px solid #fff;
+          background-color: $black;
+       }
      }
    }
+  .lines {
+    position: absolute;
+    bottom: 1px;
+    left: 0;
+    z-index: -2;
+    width: 100%;
+    background-color: transparent;
+    @include media(mobile) {
+     display: none;
+    }
+    div {
+      display: inline-block;
+      height: 1px;
+      position: absolute;
+      bottom: 0;
+      left: 0;
+    }
+    .line-1 {
+      width: 3%;
+      left: 0;
+      background-color: #827B7B;
+    }
+    .line-2 {
+      width: 230px;
+      left: 3%;
+      background-color: transparent;
+    }
+    .line-3 {
+      @include media(medium) {
+        width: 72%;
+        left: 32%;
+      }
+      @include media(mobmed) {
+        width: 67%;
+        left: 33%;
+      }
+      @media screen and (min-width: 1800px) and (max-width: 1900px) {
+        width: 76%;
+        left: 24%;
+      }
+      width: calc(100% - 3% - 230px);
+      left: 24%;
+      background-color: #827B7B;
+    }
+  }
  }
