--- a/src/css/modules/_home.scss
+++ b/src/css/modules/_home.scss
@@ -1,3 +1,9 @@
 #home {
-  
+  display: block;
+  background-image: url(../img/home-bg.jpg);
+  width: 100%;
+  height: 100vh;
+  background-size: cover;
+  background-position: center center;
+  background-attachment: fixed;
 }
