--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -5,4 +5,5 @@
 @import 'modules/_home';
 @import 'modules/_program';
 @import 'modules/_gallery';
+@import 'modules/_testimonials';
 @import '_states';
