--- a/src/css/_base.scss
+++ b/src/css/_base.scss
@@ -6,7 +6,7 @@ body {
   padding: 0;
   background-image: url(../img/bg.jpg);
 }
-h1 {
+h1, h4 {
   text-transform: uppercase;
   text-align: center;
 }
