add section 'our partners'

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -6,4 +6,5 @@
 @import 'modules/_program';
 @import 'modules/_gallery';
 @import 'modules/_testimonials';
+@import 'modules/_partners';
 @import '_states';
