add section 'contact us'

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -7,4 +7,5 @@
 @import 'modules/_gallery';
 @import 'modules/_testimonials';
 @import 'modules/_partners';
+@import 'modules/_contactUs';
 @import '_states';
