--- a/src/css/modules/_partners.scss
+++ b/src/css/modules/_partners.scss
@@ -49,7 +49,7 @@
      overflow-x: hidden;
      position: relative;
 
-    #slider-clients {
+    #slider-partners {
        user-select: none;
        -webkit-user-select: none;
       	width: 9999px;
