--- a/src/css/_base.scss
+++ b/src/css/_base.scss
@@ -5,6 +5,7 @@ body {
   margin: 0;
   padding: 0;
   background-image: url(../img/bg.jpg);
+  overflow-x: hidden;
 }
 h1, h4 {
   text-transform: uppercase;
