--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -8,4 +8,5 @@
 @import 'modules/_testimonials';
 @import 'modules/_partners';
 @import 'modules/_contactUs';
+@import 'modules/_footer';
 @import '_states';
