--- a/src/css/modules/_gallery.scss
+++ b/src/css/modules/_gallery.scss
@@ -2,6 +2,7 @@
   background-image: url(../img/gallery/gallery-bg.png);
   background-position: center center;
   background-size: cover;
+  background-attachment: fixed;
   background-color: rgba(0,0,0,0.8);
   position: relative;
   padding: 70px 0;
