--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,7 +1,7 @@
-@import 'layout/bootstrap/_grid';
+@import 'layout/bootstrap-grid/_grid';
 @import '_base';
 @import 'mixins/_mixins';
-@import 'layout/_header';
+@import 'modules/_header';
 @import 'modules/_home';
 @import 'modules/_program';
 @import 'modules/_gallery';
