--- a/src/css/modules/_program.scss
+++ b/src/css/modules/_program.scss
@@ -116,6 +116,7 @@
         margin: 0;
         font-size: 20px;
         text-transform: uppercase;
+        text-align: left;
       }
       .conditionals {
         div {
