fix bugs and add package.json

--- a/src/css/_states.scss
+++ b/src/css/_states.scss
@@ -15,8 +15,10 @@
   @include border(bb, 1px, #827B7B);
 }
 .logo-up {
-  transition: 0.5s;
-  transform: translateY(-114%) !important;
-  width: 160px !important;
-  height: 75px;
+  @include media(nomobile) {
+    transition: 0.5s;
+    transform: translateY(-114%) !important;
+    width: 160px !important;
+    height: 75px;
+  }
 }
