--- a/src/css/modules/_home.scss
+++ b/src/css/modules/_home.scss
@@ -89,12 +89,17 @@
       margin-bottom: 60px;
     }
     .btn-down {
+      display: block;
       position: relative;
       width: 60px;
       height: 60px;
       @include border(b, 1px, #fff);
       border-radius: 50%;
       margin: 0 auto;
+      transition: 0.3s;
+      &:hover{
+        background-color: #fff;
+      }
       .arrow-down {
         position: absolute;
         top: 50%;
