--- a/src/css/_states.scss
+++ b/src/css/_states.scss
@@ -18,7 +18,7 @@
   @include media(nomobile) {
     transition: 0.5s;
     transform: translateY(-114%) !important;
-    width: 160px !important;
-    height: 75px;
+    width: 120px !important;
+    height: 80px !important;
   }
 }
